syntax = "proto3";

option csharp_namespace = "ProbabilityService";

service GrpcProbabilityDistribution {
	rpc GetAllProbabilityDistributions (GetAllRequest) returns (ProbabilityDistributionResponse); 
}

message GetAllRequest {}

message GrpcProbabilityDistributionModel{
	int32 Id = 1;
	double price = 2;
	double probability = 3;
	double StockId = 4;
}

message ProbabilityDistributionResponse {
	repeated GrpcProbabilityDistributionModel probabilitydistribution =1;
}

